# backend/Kyvo.Application/Services/Platform/BootstrapRequest.cs
@@ -1,8 +1,0 @@
-namespace Kyvo.Application.Services.Platform;
-
-public sealed record BootstrapRequest
-{
-    public string? UserAgent { get; init; }
-
-    public string? IpAddress { get; init; }
-}
